--- a/playground/apps/my-app/src/index.html
+++ b/playground/apps/my-app/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <jan-root></jan-root>
+    <playground-root></playground-root>
   </body>
 </html>
